src/common/scss/blocks/wordpress/_gallery.scss
.blocks-gallery-grid,
.wp-block-gallery, .gallery {

    &.is-cropped {

        .blocks-gallery-image,
        .blocks-gallery-item,
        .wp-block-image,
        .gallery-item {

            a {
                display: block;
                height: auto;
            }

            img {
                display: block;
                height: auto;
            }
        }
    }
}

.wp-block-gallery {
    &.is-layout-flex {
        --wp--style--unstable-gallery-gap: var(--gallery-block--gutter-size,16px) !important;
        gap: var(--gallery-block--gutter-size,16px) !important;
    }
}

.blocks-gallery-image,
.blocks-gallery-item,
.gallery-item,
.wp-block-gallery .wp-block-image {
	display: block !important;
}

.blocks-gallery-image,
.blocks-gallery-item,
.wp-block-image,
.gallery-item,
.wp-caption {
    a {
        display: block;
        height: unset !important;
    }

    img {
        display: block;
        height: auto !important;
    }

    figcaption, .wp-caption-text {
        background: none !important;
        color: $black !important;
        font-size: $global-font-size !important;
        font-style: normal !important;
        text-align: left !important;
        padding: .5rem 0 0 !important;
        position: static !important;
        flex-grow: 0;
        flex-basis: unset;
    }

    &.alignnone {
        margin: 0 0 var(--spacing-l) !important;
    }
}

.wp-block-image {
	&.aligncenter {
		display: table !important;
	}

	.aligncenter {
		display: table !important;
	}
}

.wp-caption {
    &.aligncenter {
		margin-left: auto !important;
		margin-right: auto !important;
	}
}

.gallery-item {
    margin-right: var(--gallery-block--gutter-size,16px);
    margin-bottom: var(--gallery-block--gutter-size,16px);
    flex-grow: 1;

    &:last-of-type {
        margin-right: 0;
    }

    img {
        display: block;
        height: auto;
        width: 100%;
    }
}

